--- a/static-asset-server/public/hikingclub.html
+++ b/static-asset-server/public/hikingclub.html
@@ -53,9 +53,8 @@
         });
       });
     </script>
-    <h1>It's a nonealith!</h1>
+    <h1>This is hiking club</h1>
 
-    <button id="sync-18n">Sync i18n keys</button>
 
     <div id="page-wrapper">
     </div>
