--- a/microservice-node-server /public/ajax/bios.html
+++ b/microservice-node-server /public/ajax/bios.html
@@ -1,1 +1,14 @@
-hey we compiled this bios
+<h2>Meet your fellow hikers!</h2>
+
+<div class="component has-loader hikers-list" data-lagomorph-component='{
+  "isGlobal": false,
+  "viewParams": {
+    "type": "L_List",
+    "id": "hikers-list"
+  },
+  "dataContracts": 
+    [{ "dataSource": "hikersList",
+    "connector": "hikersConnector"
+  }]
+}'>
+</div>
