--- a/microservice-node-server /public/ajax/homepage.html
+++ b/microservice-node-server /public/ajax/homepage.html
@@ -1,11 +1,8 @@
 <div>
-  <!-- the below with template inputs could be used, and the viewParams and dataContracts returned in a list from the server in order to create a metalist or list of arbitrary components!!! 
-a metacomponent might always show the same component type but with different data contracts or other params
-a different route might use the same template with different data
--->
+  <h1>Welcome to Cornerstars Outdoors</h1>
 
-
-HEY BUDDY~!!!!!
-  
+  <a href="/hikingclub.html#/bios">Read Hiker Bios</a>
+  <br />
+  <a href="/hikingclub.html#/calendar">See calendar of upcoming hikes</a>
 </div>
 
