user defined component

--- a/microservice-node-server /public/ajax/bios.html
+++ b/microservice-node-server /public/ajax/bios.html
@@ -3,7 +3,7 @@
 <div class="component has-loader hikers-list" data-lagomorph-component='{
   "isGlobal": false,
   "viewParams": {
-    "type": "L_List",
+    "type": "hikersList",
     "id": "hikers-list"
   },
   "dataContracts": 
