--- a/static-asset-server/public/hikingclub.html
+++ b/static-asset-server/public/hikingclub.html
@@ -5,9 +5,12 @@
     <link rel='stylesheet' href='http://localhost:4000/stylesheets/style.css' />
     <link rel='stylesheet' href='http://localhost:4000/stylesheets/lagomorph/styles.css' />
     <script src="http://localhost:6001/store.js"></script>  
+
     <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
     <script src="http://localhost:4000/js/lib/lagomorph/L.js"></script>  
 
+
+    <script src="http://localhost:6001/userDefinedComponents.js"></script>  
   </head>
   <body>
     <script>
@@ -46,7 +49,8 @@
             {
               url: 'http://localhost:4000/ajax/i18n.json'
             }
-          ]  
+          ],
+          userDefinedComponents: userDefinedComponents      
         });
 
         
