--- a/static-asset-server/public/hikingclub.html
+++ b/static-asset-server/public/hikingclub.html
@@ -2,7 +2,7 @@
   <head>
     <title>Hiking Club</title>
 
-    <link rel='stylesheet' href='http://localhost:4000/stylesheets/style.css' />
+    <link rel='stylesheet' href='http://localhost:6001/stylesheets/hikingclub.css' />
     <link rel='stylesheet' href='http://localhost:4000/stylesheets/lagomorph/styles.css' />
     <script src="http://localhost:6001/store.js"></script>  
 
