--- a/microservice-node-server /public/ajax/bios.html
+++ b/microservice-node-server /public/ajax/bios.html
@@ -1,4 +1,6 @@
 <h2>Meet your fellow hikers!</h2>
+<a href="/hikingclub.html#/calendar">Join a hike!</a>
+<br />
 
 <div class="component has-loader hikers-list" data-lagomorph-component='{
   "isGlobal": false,
