--- a/microservice-node-server /public/ajax/calendar.html
+++ b/microservice-node-server /public/ajax/calendar.html
@@ -1,1 +1,16 @@
-hey we compiled this calendar
+<h2>Go take a hike!</h2>
+<a href="/hikingclub.html#/bios">Meet your fellow hikers!</a>
+<br />
+
+<div class="component has-loader hike-calendar" data-lagomorph-component='{
+  "isGlobal": false,
+  "viewParams": {
+    "type": "hikeCalendar",
+    "id": "hike-calendar"
+  },
+  "dataContracts": 
+    [{ "dataSource": "upcomingHikesList",
+    "connector": "upcomingHikesConnector"
+  }]
+}'>
+</div>
