--- a/static-asset-server/public/login.html
+++ b/static-asset-server/public/login.html
@@ -35,8 +35,8 @@
 
       User:
       <select id="user-select">
-        <option value="en-us">Ryan</option>
-        <option value="en-us">Victor</option>
+        <option value="en-US">Ryan</option>
+        <option value="en-US">Victor</option>
         <option value="es">Maria</option>
         <option value="fr">Jacques</option>
       </select>
