--- a/microservice-node-server /public/ajax/calendar.html
+++ b/microservice-node-server /public/ajax/calendar.html
@@ -2,6 +2,10 @@
 <a href="/hikingclub.html#/bios">Meet your fellow hikers!</a>
 <br />
 
+<h4>
+  Below is a list of our upcoming hikes- pick one you like and sign up!
+</h4>
+
 <div class="component has-loader hike-calendar" data-lagomorph-component='{
   "isGlobal": false,
   "viewParams": {
