--- a/microservice-node-server/public/ajax/homepage.html
+++ b/microservice-node-server/public/ajax/homepage.html
@@ -1,8 +1,8 @@
 <div>
-  <h1>Welcome to Cornerstars Outdoors</h1>
+  <h1 data-ui_string="Welcome to CornerStars OutDoors hiking club"></h1>
 
-  <a href="/hikingclub.html#/bios">Read Hiker Bios</a>
+  <a href="hikingclub.html#/bios" data-ui_string="Read hiker biographies"></a>
   <br />
-  <a href="/hikingclub.html#/calendar">See calendar of upcoming hikes</a>
+  <a href="hikingclub.html#/calendar" data-ui_string="See calendar of upcoming hikes"></a> 
 </div>
 
