--- a/static-asset-server/public/login.html
+++ b/static-asset-server/public/login.html
@@ -36,9 +36,8 @@
       User:
       <select id="user-select">
         <option value="en-US">Ryan</option>
-        <option value="en-US">Victor</option>
-        <option value="es">Maria</option>
-        <option value="fr">Jacques</option>
+        <option value="ru-RU">Victor</option>
+        <option value="es-MX">Maria</option>
       </select>
 
       <button id="login-button">Log in</button>
